<resources>
    <string name="app_name">Music Cloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_title">Dummy Song</string>
    <string name="dummy_singer">Dummy Singer</string>
    <string name="now_playing">Now Playing</string>
    <string name="setting">Setting</string>
    <string name="user_info">Profile</string>
    <string name="equalizer">Equalizer</string>
    <string name="music_cloud_service">Music Cloud</string>
    <string name="my_music_library">Music Library</string>
    <string name="my_playlist">Playlists</string>
    <string name="navigation_view_favorite">My Favorite</string>
    <string name="local_music">Local File</string>
    <string name="achievement">Achievement</string>
    <string name="customize_player">Customize Player</string>
    <string name="spotify">Spotify</string>
    <string name="soundcloud">Sound Cloud</string>
    <string name="radio">Radio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="time_past">00:00</string>
    <string name="time_total">00:00</string>
    <string name="si_comment_hint">Enter Your Comment About This Song</string>

    <!-- Authentication. Don't modify -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Google Demo Value-->
    <eat-comment />
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in">Start</string>
    <string name="green_theme">Green Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="use_theme_header">Use theme:</string>
    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>
    <string name="auth_providers_header">Use auth providers:</string>
    <string name="email_label">Email</string>
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="twitter_label">Twitter</string>
    <string name="twitter_label_missing_config">Twitter - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>
    <string name="tos_header">Terms of Service URL:</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="configuration_required">Configuration is required - see README.md</string>
    <string name="other_options_header">Other Options:</string>
    <string name="enable_smartlock">Enable SmartLock for Passwords</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>
    <string name="anonymous_auth_failed_msg">Anonymous authentication failed, various components of the demo will not work. Make sure your device is online and that Anonymous Auth is configured in your Firebase project(https://console.firebase.google.com/project/_/authentication/providers)</string>
    <string name="extra_google_scopes">Example extra Google scopes</string>
    <string name="games">Games</string>
    <string name="extra_facebook_scopes">Example extra Facebook scopes</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="send">Send</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>
    <string name="drive_file">Drive File</string>
    <string name="allow_new_email_acccount">Allow account creation if email does not exist.</string>

    <!-- strings for database demo activities -->
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="signed_in">Signed In</string>
    <string name="email_sent_confirm">Thank you. We have received your feedback</string>
    <string name="user_feedback">Feedback</string>
</resources>
