<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_view_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_view_now_playing"
        android:icon="@drawable/ic_headphones"
        android:title="@string/now_playing" />

    <!-- Off Line service Group-->
    <item
        android:id="@+id/navigation_view_offline_service"
        android:title="@string/local_music"
        android:icon="@drawable/ic_library_music">
        <menu>
            <item
                android:id="@+id/navigation_view_music_library"
                android:icon="@drawable/ic_audiobook"
                android:title="@string/my_music_library" />
            <item
                android:id="@+id/navigation_view_music_playlist"
                android:icon="@drawable/ic_music_note"
                android:title="@string/my_playlist" />
            <item
                android:id="@+id/navigation_view_favorite_list"
                android:icon="@drawable/ic_action_favorite"
                android:title="@string/navigation_view_favorite" />
        </menu>
    </item>

    <!-- Cloud service-->
    <item
        android:id="@+id/navigation_view_cloud_service"
        android:title="@string/music_cloud_service"
        android:icon="@drawable/ic_action_cloud">
        <menu>
            <item
                android:id="@+id/navigation_view_spotify"
                android:icon="@drawable/ic_spotify"
                android:title="@string/spotify" />
            <item
                android:id="@+id/navigation_view_soundcloud"
                android:icon="@drawable/ic_soundcloud"
                android:title="@string/soundcloud" />
        </menu>


    </item>

    <!-- Customization -->
    <item
        android:id="@+id/navigation_view_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings">
        <menu>
            <item
                android:id="@+id/navigation_view_user_info"
                android:icon="@drawable/ic_account_settings_variant"
                android:title="@string/user_info" />
            <item
                android:id="@+id/navigation_view_customize"
                android:icon="@drawable/ic_radio"
                android:title="@string/customize_player" />
            <item
                android:id="@+id/navigation_view_equalizer"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/equalizer" />
            <!--
            <item
                android:id="@+id/navigation_view_user_stat"
                android:icon="@drawable/ic_trophy"
                android:title="@string/achievement" />
                -->
        </menu>
    </item>
</menu>